# umuteam-speech-emotion

./: LICENSE  model.json  pyproject.toml  readme.md  requirements.txt
analysis/: README.md
interface/: server.py
interface/css/: style.css
interface/static/: gui.html
interface/static/css/: shell.css  style.css
interface/static/js/: audio.js
src/speech_emotion/: cli.py  config.py  inference.py  init.py  model_registry.py
src/speech_emotion/models/: multimodal_en.py  multimodal_es.py  multimodal_multi_head_cross_attn_en.py  multimodal_multi_head_cross_attn_es.py  wav2vec2_bert_en.py  wav2vec2_bert_es.py
